--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
