--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@nuxtjs/fontawesome": "^1.1.2",
