--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@nuxtjs/auth": "^4.5.1",
     "@nuxtjs/auth-next": "^5.0.0-1602966760.822bc05",
-    "@nuxtjs/axios": "^5.12.3",
+    "@nuxtjs/axios": "^5.3.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "vue-smooth-scroll": "^1.0.13"
