--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@nuxtjs/auth": "^4.5.1",
     "@nuxtjs/auth-next": "^5.0.0-1602966760.822bc05",
     "@nuxtjs/axios": "^5.3.1",
+    "cookie-universal-nuxt": "^2.1.4",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.6",
+    "nuxt-cookie-storage": "^1.0.2",
     "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
