--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@nuxtjs/auth-next": "^5.0.0-1607600955.506103a",
+    "@nuxtjs/axios": "^5.12.3",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "vue-smooth-scroll": "^1.0.13"
