--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-universal-nuxt": "^2.1.4",
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.0",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.14.6",
     "nuxt-cookie-storage": "^1.0.2",
