--- a/package.json
+++ b/package.json
@@ -9,21 +9,36 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
+    "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fullcalendar/bootstrap": "^5.5.0",
+    "@fullcalendar/core": "^5.5.1",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/list": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.1",
+    "@fullcalendar/vue": "^5.5.0",
     "@nuxtjs/auth": "^4.5.1",
     "@nuxtjs/auth-next": "^5.0.0-1602966760.822bc05",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/bootstrap-vue": "^2.0.4",
     "@nuxtjs/firebase": "^7.3.2",
     "apexcharts": "^3.23.1",
+    "babel-cli": "^6.26.0",
+    "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "c3": "^0.7.20",
+    "chart.js": "^2.9.4",
+    "chartist": "^0.11.4",
+    "cofee-script": "0.0.1-security",
     "cookie-universal-nuxt": "^2.1.4",
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
     "firebase": "^8.2.3",
     "js-cookie": "^2.2.1",
+    "node-gyp": "^7.1.2",
+    "node-sass": "^4.14.1",
     "nuxt": "^2.14.6",
     "nuxt-cookie-storage": "^1.0.2",
     "nuxt-dropzone": "^1.0.4",
@@ -31,19 +46,29 @@
     "nuxt-vue-multiselect": "^1.0.4",
     "nuxt-vuex-localstorage": "^1.2.7",
     "simplebar-vue": "^1.6.0",
+    "sweetalert2": "^10.13.0",
     "v-click-outside": "^3.1.2",
     "v-mask": "^2.2.3",
     "vue-apexcharts": "^1.6.0",
+    "vue-c3": "^1.2.11",
+    "vue-chart.js": "^0.2.0",
     "vue-chartist": "^2.3.1",
+    "vue-count-to": "^1.0.13",
     "vue-draggable": "^2.0.6",
     "vue-easy-lightbox": "^1.0.0-rc.3",
     "vue-form-wizard": "^0.8.4",
+    "vue-knob-control": "^1.6.0",
+    "vue-multiselect": "^2.1.6",
+    "vue-number-input-spinner": "^2.2.0",
     "vue-quill-editor": "^3.0.6",
+    "vue-sidebar": "0.0.2",
     "vue-slide-bar": "^1.2.0",
     "vue-smooth-scroll": "^1.0.13",
     "vue-string-filter": "^2.1.0",
+    "vue-switches": "^2.0.1",
     "vue-tour": "^1.5.0",
     "vue2-datepicker": "^3.8.2",
+    "vue2-datetime-picker": "^1.3.21",
     "vue2-dropzone": "^3.6.0",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.6"
@@ -53,6 +78,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/vuetify": "^1.11.2"
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.11.2",
+    "fibers": "^5.0.0",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.1.0",
+    "sass": "^1.32.5",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.46.0"
   }
 }
